data/forge_javadoc/1.7.10/raw/net/minecraft/world/gen/structure/StructureStrongholdPieces.PortalRoom.md
---
title: "StructureStrongholdPieces.PortalRoom"
description: "public static class StructureStrongholdPieces.PortalRoom extends StructureStrongholdPieces.Stronghold"
package: "net/minecraft/world/gen/structure"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/world/gen/structure/StructureStrongholdPieces.PortalRoom.html"
sourceType: javadoc
---

# StructureStrongholdPieces.PortalRoom

**Inheritance:** java.lang.Object → net.minecraft.world.gen.structure.StructureComponent → net.minecraft.world.gen.structure.StructureStrongholdPieces.Stronghold → net.minecraft.world.gen.structure.StructureStrongholdPieces.PortalRoom

## Class signature

```java
public static class StructureStrongholdPieces.PortalRoom extends StructureStrongholdPieces.Stronghold
```

## Methods

- `boolean addComponentParts(World p_74875_1_, java.util.Random p_74875_2_, StructureBoundingBox p_74875_3_)`
- `void buildComponent(StructureComponent p_74861_1_, java.util.List p_74861_2_, java.util.Random p_74861_3_)`
- `static StructureStrongholdPieces.PortalRoom findValidPlacement(java.util.List p_75004_0_, java.util.Random p_75004_1_, int p_75004_2_, int p_75004_3_, int p_75004_4_, int p_75004_5_, int p_75004_6_)`
- `protected void func_143011_b(NBTTagCompound p_143011_1_)`
- `protected void func_143012_a(NBTTagCompound p_143012_1_)`

## Fields

- `PortalRoom`
- `PortalRoom`
